--- a/Database.vcxproj
+++ b/Database.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="arrList.h" />
     <ClInclude Include="DataBase.h" />
     <ClInclude Include="Student.h" />
   </ItemGroup>
