--- a/Database.vcxproj.filters
+++ b/Database.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Student.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="arrList.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
